[+] добавлен exrate-service для генерации курсов валют
