# exchange-service/src/main/resources/api-spec.yaml
@@ -6,6 +6,8 @@ info:
 tags:
   - name: Rate
     description: API получения текущих курсов валют
+  - name: SetRate
+    description: API установки текущих курсов валют
   - name: Exchange
     description: API для конвертации валюты
 paths:
@@ -16,7 +18,7 @@ paths:
       operationId: getRates
       summary: Получить текущие курсы валют к рублю
       responses:
-        200:
+        '200':
           description: Текущие курсы валют к рублю
           content:
             application/json:
@@ -24,6 +26,30 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CurrentRate'
+    post:
+      tags:
+        - SetRate
+      operationId: setRates
+      summary: Установить текущие курсы валют к рублю
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/RateShort'
+      responses:
+        '204':
+          description: Операция выполнена
+        '400':
+          description: Неверный запрос (валидация не пройдена)
+        '409':
+          description: Ошибка при выполнении операции
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /exchange:
     post:
       tags:
@@ -71,6 +97,20 @@ components:
       required:
         - currencyCode
         - currencyName
+        - rate
+    RateShort:
+      type: object
+      properties:
+        currencyCode:
+          type: string
+          example: "USD"
+          description: Код валюты (ISO 4217)
+        rate:
+          type: number
+          format: decimal
+          description: Курс к рублю
+      required:
+        - currencyCode
         - rate
     ExchangeRequest:
       type: object
